fix #933 add work-around for app-setting wrap

--- a/sirepo/package_data/static/css/sirepo.css
+++ b/sirepo/package_data/static/css/sirepo.css
@@ -43,6 +43,10 @@
       display: none;
     }
 
+    .dropdown-menu {
+      white-space: nowrap;
+    }
+
     html, body {
       height: 100%;
       min-height: 100%;
